--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <label for="rule" class="col-sm-4 control-label">Rule</label>
           <div class="col-sm-8">
             <input type="number" rv-value="state.rule" rv-on-change="controller.clear" min="0" max="255" name="rule" class="form-control" />
+            <span class="text-muted">Cool rules:<a rv-each-rule="state.coolRules" rv-text="rule" rv-on-click="controller.setRule" href="#" class="cool-rule"></a></span>
           </div>
         </div>
         <div class="form-group">
