--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="form-group">
           <label for="size" class="col-sm-4 control-label">Size</label>
           <div class="col-sm-8">
-            <input type="number" rv-value="state.size" rv-on-change="controller.clear" name="size" class="form-control" />
+            <input type="number" rv-value="state.size" rv-on-change="controller.clear" min="1" max="100" name="size" class="form-control" />
           </div>
         </div>
         <div class="form-group">
